[project]
name = "gtfs-io"
version = "0.0.1"
description = "A Python library for reading, writing, and validating GTFS (General Transit Feed Specification) data."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Fabián Abarca Calderón", email = "ensinergia@gmail.com" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[dependency-groups]
dev = ["pytest>=8.0"]
docs = [
    "zensical>=0.0.34",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gtfs_io"]
